# provenance-semiring

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: semiring-provenance-architecture.md
papers/Buneman_2001_CharacterizationDataProvenance/: abstract.md  citations.md  description.md  metadata.json  notes.md
papers/Green_2007_ProvenanceSemirings/: abstract.md  citations.md  claims.yaml  description.md  metadata.json  notes.md
src/provenance_semiring/: __init__.py  derivative.py  homomorphism.py  labels.py  nogoods.py  polynomial.py  projections.py  support.py  variables.py
tests/: test_polynomial_provenance_preserved_through_combine.py  test_provenance_derivative_properties.py  test_provenance_labels_algebra.py  test_provenance_nogoods_properties.py  test_provenance_polynomial_properties.py  test_provenance_projection_properties.py
