[project]
name = "provenance-semiring"
version = "0.1.0"
description = "Green et al. (2007) provenance semirings: provenance polynomials, homomorphic evaluation, why-provenance, and nogood filtering"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Q", email = "q.alpha@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest", "pyright", "hypothesis"]

[tool.pyright]
include = ["src/provenance_semiring"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
markers = [
    "property: marks tests as Hypothesis property tests",
]
